2008-03-26  Gabriel Burt  <gabriel.burt@gmail.com>

	* NEWS: Update for forthcoming 0.98.2 release.

2008-03-26  Sebastian Dröge  <slomo@circular-chaos.org>

	* build/m4/banshee/notify-sharp.m4:
	* src/Extensions/Banshee.NotificationArea/Makefile.am:
	* configure.ac: Allow building against an external notify-sharp if one
	is found. This is especially important as the next notification-daemon
	release in a few days changes the DBus API and a newer notify-sharp is
	required then.

2008-03-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/AlbumListView.cs:
	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ArtistListView.cs:
	Start playing when activated.  Fixes BGO #524412.

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ArtworkManager.cs:
	Catch exceptions with loading artwork.  Catches 'no data in image' error.

2008-03-25  Scott Peterson <lunchtimemama@gmail.com> 

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Rendering.cs:
	Emergency fix0rz!!1!

2008-03-25  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/StationSource.cs:
	Don't display 'Add Station' action when on a station source.

2008-03-25  Scott Peterson <lunchtimemama@gmail.com> 

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Header.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Interaction.cs:
	Use QueueDraw.

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Rendering.cs:
	New QueueDraw method so that new rendering model will properly
	update.

2008-03-25  Aaron Bockover  <abock@gnome.org>

	* build/Makefile.am: Removed the old .pc file, SUBDIRS the new pkg-config 

	* build/pkg-config/Makefile.am: Generate .pc files from the .pc.in files

	* build/pkg-config/banshee-1-core.pc.in:
	* build/pkg-config/banshee-1-hyena-gui.pc.in:
	* build/pkg-config/banshee-1-hyena.pc.in:
	* build/pkg-config/banshee-1-lastfm-gui.pc.in: