@@ -1,5 +1,13 @@
 2008-03-26  Gabriel Burt  <gabriel.burt@gmail.com>
 
+	* src/Core/Banshee.Core/Banshee.Streaming/SaveTrackMetadataJob.cs: Port
+	fix for Artist tag saving from stable.
+
+	* src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/TrackEditor.cs: Remove
+	artist/album readonly warning, whitespace fixes.
+
+2008-03-26  Gabriel Burt  <gabriel.burt@gmail.com>
+
 	* NEWS: Update for forthcoming 0.98.2 release.
 
 2008-03-26  Sebastian Dröge  <slomo@circular-chaos.org>
